--- a/package.json
+++ b/package.json
@@ -19,6 +19,24 @@
     "singleQuote": true,
     "arrowParens": "avoid"
   },
+  "jest": {
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "ts"
+    ],
+    "moduleDirectories": [
+      "node_modules",
+      "./"
+    ],
+    "rootDir": "src",
+    "testRegex": ".spec.ts$",
+    "transform": {
+      "^.+\\.(t|j)s$": "ts-jest"
+    },
+    "coverageDirectory": "../coverage",
+    "testEnvironment": "node"
+  },
   "homepage": "https://github.com/sefabaser/Pixi-Framework#readme",
   "scripts": {
     "build": "tsc",
@@ -29,7 +47,10 @@
     "test:cov": "jest --coverage",
     "deploy": "npm test && npm run build && npm publish"
   },
-  "dependencies": {},
+  "dependencies": {
+    "actions-lib": "1.3.0",
+    "helpers-lib": "1.4.1"
+  },
   "devDependencies": {
     "@types/jest": "^26.0.10",
     "@typescript-eslint/eslint-plugin": "^3.10.1",
