--- a/package.json
+++ b/package.json
@@ -48,8 +48,12 @@
     "deploy": "npm test && npm run build && npm publish"
   },
   "dependencies": {
+    "@pixi/unsafe-eval": "^5.3.3",
     "actions-lib": "1.3.0",
-    "helpers-lib": "1.4.1"
+    "helpers-lib": "1.4.1",
+    "pixi-sound": "^3.0.5",
+    "pixi-viewport": "^4.13.2",
+    "pixi.js": "^5.3.3"
   },
   "devDependencies": {
     "@types/jest": "^26.0.10",
