--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "eslint": "^7.7.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-no-null": "^1.0.2",
     "jest": "^26.4.2",
     "ts-jest": "^26.2.0",
     "typescript": "^4.0.2"
