--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
   "homepage": "https://github.com/sefabaser/Pixi-Framework#readme",
   "scripts": {
     "build": "tsc",
-    "pretest": "clear",
+    "pretest": "cls",
     "lint": "eslint \"src/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
