--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pixi-framework",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Pixi Framework",
   "main": "dist/index.js",
   "repository": {
@@ -50,6 +50,7 @@
   "dependencies": {
     "@pixi/unsafe-eval": "^5.3.3",
     "actions-lib": "1.3.1",
+    "astar-typescript": "^1.2.2",
     "helpers-lib": "1.4.1",
     "pixi-sound": "^3.0.5",
     "pixi-viewport": "^4.13.2",
